Fix configs for GCC serial
Turn off parallel TPLs.

Turn off -Werror (deprecation warnings).

SuperLU needs -lm.

Signed-off-by: Samuel E. Browne <sebrown@sandia.gov>

--- a/packages/framework/ini-files/config-specs.ini
+++ b/packages/framework/ini-files/config-specs.ini
@@ -437,6 +437,8 @@ opt-set-cmake-var SuperLU_INCLUDE_DIRS PATH FORCE : ${SUPERLU_INC|ENV}
 opt-set-cmake-var SuperLU_INCLUDE_DIRS STRING FORCE : ${SUPERLU_INC|ENV}
 opt-set-cmake-var SuperLU_LIBRARY_DIRS PATH FORCE : ${SUPERLU_LIB|ENV}
 opt-set-cmake-var SuperLU_LIBRARY_DIRS STRING FORCE : ${SUPERLU_LIB|ENV}
+opt-set-cmake-var SuperLU_LIBRARY_NAMES STRING : superlu;m
+opt-set-cmake-var ML_ENABLE_SuperLU BOOL FORCE : OFF
 
 # Metis
 opt-set-cmake-var TPL_METIS_LIBRARIES STRING FORCE : ${METIS_LIB|ENV}/libmetis.so
@@ -461,6 +463,7 @@ use COMMON
 opt-set-cmake-var TPL_ENABLE_ParMETIS BOOL FORCE : OFF
 opt-set-cmake-var TPL_ENABLE_Scotch   BOOL FORCE : OFF
 opt-set-cmake-var TPL_Netcdf_LIBRARIES STRING FORCE : ${SEMS_NETCDF_LIBRARY_PATH|ENV}/libnetcdf.so
+
 [COMMON_INTEL]
 use COMMON
 opt-set-cmake-var SuperLUDist_INCLUDE_DIRS PATH : ${SEMS_SUPERLU_DIST_INCLUDE_PATH|ENV}
@@ -2065,9 +2068,6 @@ opt-set-cmake-var Teko_DISABLE_LSCSTABALIZED_TPETRA_ALPAH_INV_D BOOL       : ON
 
 use RHEL7_TEST_DISABLES|CLANG
 
-opt-set-cmake-var SuperLU_LIBRARY_NAMES STRING : superlu;m
-opt-set-cmake-var ML_ENABLE_SuperLU BOOL FORCE : OFF
-
 opt-set-cmake-var Pliris_vector_random_MPI_3_DISABLE BOOL : ON
 opt-set-cmake-var Pliris_vector_random_MPI_4_DISABLE BOOL : ON
 
@@ -3084,9 +3084,12 @@ use USE-DEPRECATED|YES
 use PACKAGE-ENABLES|NO-PACKAGE-ENABLES
 
 use COMMON_SPACK_TPLS
+opt-set-cmake-var TPL_ENABLE_ParMETIS BOOL FORCE : OFF
+opt-set-cmake-var TPL_ENABLE_Scotch   BOOL FORCE : OFF
+opt-set-cmake-var TPL_Netcdf_LIBRARIES STRING FORCE : ${NETCDF_C_LIB|ENV}/libnetcdf.so
 
 opt-set-cmake-var Trilinos_ENABLE_Fortran OFF    BOOL         : OFF
-opt-set-cmake-var CMAKE_CXX_FLAGS                STRING       : -Wall -Wno-clobbered -Wno-vla -Wno-pragmas -Wno-unknown-pragmas -Wno-parentheses -Wno-unused-local-typedefs -Wno-literal-suffix -Wno-deprecated-declarations -Wno-misleading-indentation -Wno-int-in-bool-context -Wno-maybe-uninitialized -Wno-class-memaccess -Wno-nonnull-compare -Wno-address -Wno-inline -Wno-unused-but-set-variable -Wno-unused-variable -Wno-unused-label -Werror -Werror=shadow -DTRILINOS_HIDE_DEPRECATED_HEADER_WARNINGS
+opt-set-cmake-var CMAKE_CXX_FLAGS                STRING       : -Wall -Wno-clobbered -Wno-vla -Wno-pragmas -Wno-unknown-pragmas -Wno-parentheses -Wno-unused-local-typedefs -Wno-literal-suffix -Wno-deprecated-declarations -Wno-misleading-indentation -Wno-int-in-bool-context -Wno-maybe-uninitialized -Wno-class-memaccess -Wno-nonnull-compare -Wno-address -Wno-inline -Wno-unused-but-set-variable -Wno-unused-variable -Wno-unused-label -Werror=shadow -DTRILINOS_HIDE_DEPRECATED_HEADER_WARNINGS
 
 use GCC_PACKAGE_SPECIFIC_WARNING_FLAGS
 
